--- a/rootdir/etc/init.qcom-common.rc
+++ b/rootdir/etc/init.qcom-common.rc
@@ -406,6 +406,16 @@ on property:init.svc.bootanim=stopped
 
     write /sys/block/mmcblk0/queue/scheduler fiops
     start mpdecision
+    write /sys/kernel/cpu_input_boost/ib_freqs "960000 883200 729600"
+    write /sys/kernel/cpu_input_boost/load_based_syncs 1
+    write /sys/kernel/cpu_input_boost/migration_boost_ms 20
+    write /sys/kernel/cpu_input_boost/migration_load_threshold 25
+    write /sys/kernel/cpu_input_boost/sync_threshold 1574400
+    write /sys/kernel/cpu_input_boost/enabled 1
+    write /dev/cpuctl/cpu.notify_on_migrate 1
+    write /sys/block/mmcblk0/queue/scheduler deadline
+
+
 
 on property:init.svc.bootanim=running
     # Switch to NOOP while booting
